force-app/main/default/objects/Exchange__c/Exchange__c.object-meta.xml
<CustomObject>
    <label>Exchange</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Exchange Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>