force-app/main/default/objects/Exchange__c/fields/Fulfillment_Location__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Exchanges</relationshipLabel>
    <relationshipName>Exchanges</relationshipName>
    <type>Lookup</type>
</CustomField>