force-app/main/default/objects/Exchange__c/fields/New_SKU__c.field-meta.xml
<CustomField>
    <fullName>New_SKU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>New SKU</label>
    <referenceTo>SKU__c</referenceTo>
    <relationshipLabel>Exchanges (New SKU)</relationshipLabel>
    <relationshipName>Exchanges_New</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>