force-app/main/default/objects/Exchange__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>Order_Line__c</referenceTo>
    <relationshipLabel>Exchanges</relationshipLabel>
    <relationshipName>Exchanges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>