force-app/main/default/objects/Exchange__c/fields/Original_SKU__c.field-meta.xml
<CustomField>
    <fullName>Original_SKU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Original SKU</label>
    <referenceTo>SKU__c</referenceTo>
    <relationshipLabel>Exchanges (Original SKU)</relationshipLabel>
    <relationshipName>Exchanges_Original</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>