force-app/main/default/objects/Exchange__c/fields/Price_Delta__c.field-meta.xml
<CustomField>
    <fullName>Price_Delta__c</fullName>
    <label>Price Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>