force-app/main/default/objects/Exchange__c/fields/Reverse_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Pickup_Date__c</fullName>
    <label>Reverse Pickup Date</label>
    <type>Date</type>
</CustomField>