force-app/main/default/objects/Exchange__c/fields/Reverse_Pickup_Window__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Pickup_Window__c</fullName>
    <label>Reverse Pickup Window</label>
    <length>40</length>
    <type>Text</type>
</CustomField>